force-app/main/default/objects/Commentary__c/Commentary__c.object-meta.xml
<CustomObject>
    <description>Stores match commentary summary and full event JSON</description>
    <label>Commentary</label>
    <nameField>
        <displayFormat>COM-{0000}</displayFormat>
        <label>Commentary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commentaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>