force-app/main/default/objects/Commentary__c/fields/Cards_Yellow_Total__c.field-meta.xml
<CustomField>
    <fullName>Cards_Yellow_Total__c</fullName>
    <label>Cards Yellow Total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>