force-app/main/default/objects/Commentary__c/fields/Commentary_JSON__c.field-meta.xml
<CustomField>
    <fullName>Commentary_JSON__c</fullName>
    <label>Commentary JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>