force-app/main/default/objects/Commentary__c/fields/Fixture__c.field-meta.xml
<CustomField>
    <fullName>Fixture__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Fixture</label>
    <referenceTo>Fixture__c</referenceTo>
    <relationshipLabel>Commentaries</relationshipLabel>
    <relationshipName>Commentaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>