force-app/main/default/objects/Commentary__c/fields/Goals_Home__c.field-meta.xml
<CustomField>
    <fullName>Goals_Home__c</fullName>
    <label>Goals Home</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>