force-app/main/default/objects/Commentary__c/fields/Key_Players__c.field-meta.xml
<CustomField>
    <fullName>Key_Players__c</fullName>
    <label>Key Players</label>
    <length>255</length>
    <type>Text</type>
</CustomField>