force-app/main/default/objects/Commentary__c/fields/Wickets_Total__c.field-meta.xml
<CustomField>
    <fullName>Wickets_Total__c</fullName>
    <label>Wickets Total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>